--- a/python_homework_yanbagus_95100.ipynb
+++ b/python_homework_yanbagus_95100.ipynb
@@ -991,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1025,89 +1025,89 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>WhatsApp Messenger</th>\n",
-       "      <td>138228988.0</td>\n",
+       "      <td>207348304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Messenger â Text and Video Chat for Free</th>\n",
-       "      <td>113289425.0</td>\n",
+       "      <td>169932272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Viber Messenger</th>\n",
-       "      <td>45340508.0</td>\n",
+       "      <td>56675481</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>UC Browser - Fast Download Private &amp; Secure</th>\n",
-       "      <td>35427772.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Google Chrome: Fast &amp; Secure</th>\n",
-       "      <td>28928148.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BBM - Free Calls &amp; Messages</th>\n",
-       "      <td>25686296.0</td>\n",
+       "      <td>53140694</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LINE: Free Calls &amp; Messages</th>\n",
-       "      <td>21580381.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>WeChat</th>\n",
-       "      <td>16162410.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Truecaller: Caller ID, SMS spam blocking &amp; Dialer</th>\n",
-       "      <td>15640984.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Opera Mini - fast web browser</th>\n",
-       "      <td>15451126.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Hangouts</th>\n",
-       "      <td>13677659.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Yahoo Mail â Stay Organized</th>\n",
-       "      <td>12564485.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>UC Browser Mini -Tiny Fast Private &amp; Secure</th>\n",
-       "      <td>10945365.0</td>\n",
+       "      <td>32370670</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Skype - free IM &amp; video calls</th>\n",
-       "      <td>10484169.0</td>\n",
+       "      <td>31452507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Google Chrome: Fast &amp; Secure</th>\n",
+       "      <td>28928148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BBM - Free Calls &amp; Messages</th>\n",
+       "      <td>25686296</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WeChat</th>\n",
+       "      <td>21549856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>imo free video calls and chat</th>\n",
-       "      <td>9571880.0</td>\n",
+       "      <td>19143760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Truecaller: Caller ID, SMS spam blocking &amp; Dialer</th>\n",
+       "      <td>15640984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Opera Mini - fast web browser</th>\n",
+       "      <td>15451126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Gmail</th>\n",
+       "      <td>13813131</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hangouts</th>\n",
+       "      <td>13677659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yahoo Mail â Stay Organized</th>\n",
+       "      <td>12564485</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                       Reviews\n",
-       "App                                                           \n",
-       "WhatsApp Messenger                                 138228988.0\n",
-       "Messenger â Text and Video Chat for Free         113289425.0\n",
-       "Viber Messenger                                     45340508.0\n",
-       "UC Browser - Fast Download Private & Secure         35427772.0\n",
-       "Google Chrome: Fast & Secure                        28928148.0\n",
-       "BBM - Free Calls & Messages                         25686296.0\n",
-       "LINE: Free Calls & Messages                         21580381.0\n",
-       "WeChat                                              16162410.0\n",
-       "Truecaller: Caller ID, SMS spam blocking & Dialer   15640984.0\n",
-       "Opera Mini - fast web browser                       15451126.0\n",
-       "Hangouts                                            13677659.0\n",
-       "Yahoo Mail â Stay Organized                       12564485.0\n",
-       "UC Browser Mini -Tiny Fast Private & Secure         10945365.0\n",
-       "Skype - free IM & video calls                       10484169.0\n",
-       "imo free video calls and chat                        9571880.0"
+       "                                                     Reviews\n",
+       "App                                                         \n",
+       "WhatsApp Messenger                                 207348304\n",
+       "Messenger â Text and Video Chat for Free         169932272\n",
+       "Viber Messenger                                     56675481\n",
+       "UC Browser - Fast Download Private & Secure         53140694\n",
+       "LINE: Free Calls & Messages                         32370670\n",
+       "Skype - free IM & video calls                       31452507\n",
+       "Google Chrome: Fast & Secure                        28928148\n",
+       "BBM - Free Calls & Messages                         25686296\n",
+       "WeChat                                              21549856\n",
+       "imo free video calls and chat                       19143760\n",
+       "Truecaller: Caller ID, SMS spam blocking & Dialer   15640984\n",
+       "Opera Mini - fast web browser                       15451126\n",
+       "Gmail                                               13813131\n",
+       "Hangouts                                            13677659\n",
+       "Yahoo Mail â Stay Organized                       12564485"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1121,7 +1121,7 @@
     "google_play_apps= google_play_apps[(google_play_apps.Category == 'COMMUNICATION')] \n",
     "google_play_apps = google_play_apps[(google_play_apps.Installs !=  'Free') | (google_play_apps.Reviews !=  '3.0M')]\n",
     "\n",
-    "google_play_apps['Reviews'] = google_play_apps.Reviews.astype(int).drop_duplicates()\n",
+    "google_play_apps['Reviews'] = google_play_apps.Reviews.astype(int)\n",
     "google_play_apps.groupby(by='App').sum().sort_values('Reviews', ascending=False).head(15)\n",
     "\n"
    ]
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -1159,46 +1159,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>App</th>\n",
-       "      <th>Category</th>\n",
        "      <th>Installs</th>\n",
        "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>App</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1722</th>\n",
-       "      <td>My Talking Tom</td>\n",
-       "      <td>GAME</td>\n",
+       "      <th>Subway Surfers</th>\n",
+       "      <td>1000000000</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>My Talking Tom</th>\n",
        "      <td>500000000</td>\n",
        "      <td>4.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1655</th>\n",
-       "      <td>Candy Crush Saga</td>\n",
-       "      <td>GAME</td>\n",
+       "      <th>Candy Crush Saga</th>\n",
        "      <td>500000000</td>\n",
        "      <td>4.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1661</th>\n",
-       "      <td>Temple Run 2</td>\n",
-       "      <td>GAME</td>\n",
-       "      <td>500000000</td>\n",
-       "      <td>4.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   App Category   Installs  Rating\n",
-       "1722    My Talking Tom     GAME  500000000     4.5\n",
-       "1655  Candy Crush Saga     GAME  500000000     4.4\n",
-       "1661      Temple Run 2     GAME  500000000     4.3"
+       "                    Installs  Rating\n",
+       "App                                 \n",
+       "Subway Surfers    1000000000     4.5\n",
+       "My Talking Tom     500000000     4.5\n",
+       "Candy Crush Saga   500000000     4.4"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,12 +1206,13 @@
     "import pandas as pd \n",
     "\n",
     "google_play_apps = pd.read_csv('C:/Users/YanSeo/Telkomsel-DSA/googleplaystore.csv', encoding='latin1', delimiter=',')\n",
-    "google_play_apps = google_play_apps.loc[:,['App','Category', 'Installs', 'Rating']].drop_duplicates()\n",
+    "google_play_apps = google_play_apps.loc[:,['App','Category', 'Installs', 'Rating']]\n",
     "google_play_apps= google_play_apps[(google_play_apps.Category == 'GAME') & (google_play_apps.Installs !=  'Free') ] \n",
     "google_play_apps['Installs'] = google_play_apps.Installs.apply(lambda x: x.replace('+', '') if '+' in str(x) else x)\n",
-    "google_play_apps['Installs'] = google_play_apps['Installs'].apply(lambda x: x.replace(',', '') if ',' in str(x) else x)\n",
+    "google_play_apps['Installs'] = google_play_apps['Installs'].apply(lambda x: x.replace(',', '') if ',' in str(x) else x).astype(int)\n",
     "\n",
-    "google_play_apps.sort_values(['Installs', 'Rating'], ascending=[False, False]).head(3)\n"
+    "app_install = google_play_apps.groupby(by='App').mean().sort_values('Installs', ascending=False)\n",
+    "app_install.sort_values(['Installs', 'Rating'], ascending=[False, False]).head(3)\n"
    ]
   },
   {
